--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,7 +10,16 @@ h1 {
   font-size: 50px;
 }
 
+h2 {
+  font-size: 42px;
+}
+
 a {
   color: Aquamarine;
   font-size: 16px;
+}
+
+.description {
+  font-size: 21px;
+  color: Gray;
 }
